<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".view.activities.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hind_regular"
                android:text="@string/string_welcome"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hind_semibold"
                android:text="@string/string_username"
                android:textColor="@color/black"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

            <TextView
                android:id="@+id/tv_your_points_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hind_regular"
                android:text="@string/string_your_points_title"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hind_semibold"
                android:text="@string/string_points"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_your_points_title" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="15dp"
            android:background="@color/black"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/dashboard_card_bg"
            android:elevation="5dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_survey_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tv_available_survey_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/hind_bold"
                    android:text="@string/string_available_survey_count"
                    android:textColor="@color/white"
                    android:textSize="96sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_toEndOf="@id/tv_available_survey_count"
                    android:fontFamily="@font/hind_bold"
                    android:lineSpacingExtra="-15dp"
                    android:text="@string/string_available_survey_title"
                    android:textColor="@color/white"
                    android:textSize="32sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_goto_survey"
                android:layout_width="210dp"
                android:layout_height="45dp"
                android:layout_below="@id/rl_survey_count"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/btn_bg2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/hind_regular"
                    android:text="@string/string_goto_survey"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/iv_survey"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="15dp"
                android:contentDescription="@string/string_content_description"
                android:src="@drawable/iv_survey" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/hind_bold"
                    android:text="@string/string_want_to_provide_feedback"
                    android:textColor="@color/black"
                    android:textSize="28sp" />

                <RelativeLayout
                    android:id="@+id/btn_share_feedback"
                    android:layout_width="210dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_below="@id/rl_survey_count"
                    android:background="@drawable/btn_bg"
                    tools:ignore="ObsoleteLayoutParam">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/hind_regular"
                        android:text="@string/string_share_feedback"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/hind_bold"
            android:text="@string/string_logout"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="20sp" />
    </LinearLayout>


</ScrollView>