<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/tv_survey_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_survey_name"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/hind_semibold"/>

            <TextView
                android:id="@+id/tv_survey_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_survey_name"
                android:fontFamily="@font/hind_semibold"
                android:text="@string/string_survey_date"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/btn_view_summary"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="50dp"
                android:layout_below="@id/tv_survey_date"
                android:background="@drawable/btn_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/hind_bold"
                    android:text="@string/string_view_summary"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </RelativeLayout>
        </RelativeLayout>


</androidx.cardview.widget.CardView>